Points table in English UK and US is wrapping (bug 3856)

--- a/Zbang.Cloudents.Mvc4WebRole/Content/lang.ru-RU.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/lang.ru-RU.less
@@ -212,6 +212,11 @@ q {
 .upSectionWpr .box:hover .btn3 {
     padding: 3px 8px; //reduced padding
 }
+.emptyPoints p {
+  margin-left: 25px;
+  text-indent: -25px;
+  white-space: pre-wrap;
+}
 /*#endregion */
 
 /*#region modal.less */
